update dashboard